<resources>
    <string name="app_name">SmartCompass2018</string>
    <string name="no_gps_no_network">Device hasn\'t gps and network</string>
    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lat_long_used">Invalid lat long used</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="text_decription_notifi_warning_1">If you see a warning icon in yellow @ or Magnetic Field’s value being low or medium, you’ll need to calibrate your compass.</string>
    <string name="text_decription_perform_warning">Make a figure 8 until your compass is calibrated. You should only have to do this a few times.</string>
    <string name="magnetic_title">Magnetic Field : </string>
    <string name="calibrate_title">Calibrate</string>
    <string name="calibrate_magnetic">Low</string>
    <string name="calibrate_medium">Medium</string>
    <string name="calibrate_hight">Hight</string>
    <string name="button_rate">Rate Now</string>
    <string name="button_rate_later">Later</string>
    <string name="button_no_thanks">No, Thanks</string>
    <string name="title_dialog_rate_app">Do you enjoy this app?</string>
    <string name="message_dialog_rate_app">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank for your support!</string>
    <string name="text_degrees_direction">%d\u00b0 %s</string>
    <string name="setting">Setting</string>
    <string name="share">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us">About Us</string>
    <string name="decription1">SmartCompass: is the best smart compass for android,user-friendly with a beautifully crafted design is the most gorgeous best compass app in the store.</string>
    <string name="decription2">It features everything you could ever need to get by in the great outdoors, including a digital compass GPS that shows direction relative to the geographic cardinal directions, with true north and magnetic North, south, east, and west coordinates, speed of travel and map that makes navigating your world faster and easier.</string>
    <string name="decription3">It helps you locate your current location and you can find your way easily through the best compass app with gps map.</string>
    <string name="decription4">If you like the app, please help we 5 star review.Thank you very much!</string>
    <string name="address_tv_address">Address :</string>
    <string name="address_latitude">Latitude :</string>
    <string name="address_longitude">Longitude :</string>
    <string name="address_networks_gps_20_m">NetWorks GPS ±20 m</string>
    <string name="map_enter_your_destination">enter your destination</string>
    <string name="calibrate_low">Low</string>
    <string name="compass_my_location">My Location</string>
    <string name="compass_32_05">32.05</string>
    <string name="compass_21_03">21.03</string>
    <string name="compass_direction_dn">DN</string>
</resources>
