<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_scrollFlags="scroll|enterAlways"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_margin="@dimen/margin_layout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_decription_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decription1"
            android:textColor="@color/colorPrimaryWhite"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_decription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_layout"
            android:text="@string/decription2"
            android:textColor="@color/colorPrimaryWhite"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_decription_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_layout"
            android:text="@string/decription3"
            android:textColor="@color/colorPrimaryWhite"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_thank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_layout"
            android:text="@string/decription4"
            android:textColor="@color/colorPrimaryWhite"
            android:textSize="16sp" />

    </LinearLayout>
</RelativeLayout>